# helpcenter-backend

./: .env.prod  .gitignore  Dockerfile  Dockerfile.prod  Dockerfile.uv  Makefile  README-OUTDATED.md  README-REFACTORED.md  README.md  alembic.ini  cloudbuild.yaml  docker-compose.test.yaml  docker-compose.yaml  env.example  init-db.sh  pyproject.toml  pytest.ini  requirements.txt
.github/workflow/: backend-ci.yaml
.github/workflows/: backend-ci.yaml  ci.yaml  cloudrun-deploy.yaml  separated-ci.yaml  test.yaml
app/: db.py  main.py  models.py  resolvers.py  schema.py  seeds.py
app/core/: db.py  dev_editor.py  editor_guard.py  logging.py  main.py  middleware.py  rate_limiting.py  settings.py  validation.py
app/data/: seeds.py
app/domain/: models.py  resolvers.py
app/mappers/: __init__.py  base.py  category.py
app/migrations/: alembic.ini  env.py
app/repositories/: __init__.py  base.py  category.py  guide.py  media.py
app/services/: category.py  guide.py  media.py
app/utils/: time.py
cloudbuild/: cloudbuild-editor.yaml  cloudbuild-graphql.yaml
common/: pyproject.toml
common/core/: db.py  logger.py  middleware.py  rate_limiting.py  settings.py  validation.py
common/domain/dtos/: category.py  guide.py  media.py
common/domain/models/: category.py  feedback.py  guide.py  media.py
common/domain/resolvers/: category.py  feedback.py  guide.py  media.py
common/domain/rest/: dev_editor.py  editor_guard.py  guide_editor.py  media_editor.py
common/domain/schema/: __init__.py  category.py  feedback.py  guide.py  media.py
common/repositories/: __init__.py  base.py  category.py  guide.py  media.py
common/services/: category.py  guide.py  media.py
docs/: DEPLOYMENT.md  EDITOR.md  setup-neon.md
editor_api/: Dockerfile.uv  __init__.py  main.py  pyproject.toml  requirements.txt
graphql_api/: Dockerfile.uv  __init__.py  main.py  pyproject.toml  requirements.txt
graphql_api/migrations/: env.py
helpcenter-common/: __init__.py  requirements.txt
helpcenter-common/core/: logging.py  validation.py
helpcenter-common/repositories/: __init__.py  base.py  guide.py
helpcenter-common/services/: category.py  guide.py
helpcenter-editor-api/: Dockerfile  deploy-cloud-function.sh  main.py  requirements.txt
helpcenter-graphql-api/: Dockerfile  Dockerfile.prod  alembic.ini  main.py  requirements.txt
scripts/: deploy-cloud-function.sh  deploy-cloud-run.sh  deploy-editor.sh  deploy.sh  migrate.py  setup-uv.sh  start.sh
scripts/demo/: demo.py  (+1 more)
tests/: conftest.py  pytest.ini  test_categories.py  test_health.py
(+66 files in other folders)
