[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "helpcenter-backend"
version = "1.0.0"
description = "Help Center Backend - GraphQL and REST APIs"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "sqlmodel",
    "sqlalchemy",
    "pydantic>=2.0",
    "pydantic-settings",
    "asyncpg",
    "psycopg2-binary",
    "google-cloud-storage==2.10.0",
    "redis==5.0.1",
    "fastapi",
    "slowapi==0.1.9",
    "python-dotenv",
    "strawberry-graphql[fastapi]",
    "functions-framework",
    "alembic>=1.16.5",
]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio",
    "httpx>=0.28.0",
    "typer",
    "rich==13.7.0",
    "pytest-cov",
    "flake8",
    "black",
    "autoflake",
    "isort",
]

[tool.hatch.build.targets.wheel]
packages = ["common", "graphql_api", "editor_api"]
