[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "helpcenter-common"
version = "1.0.0"
description = "Common shared code for Help Center Backend"
requires-python = ">=3.11"
dependencies = [
    "sqlmodel",
    "sqlalchemy",
    "pydantic>=2.0",
    "pydantic-settings",
    "asyncpg",
    "google-cloud-storage==2.10.0",
    "redis==5.0.1",
    "fastapi",
    "slowapi==0.1.9",
    "python-dotenv",
]

[tool.uv]
dev-dependencies = []
